ml code updated

--- a/scripts/earthquake_prediction.ipynb
+++ b/scripts/earthquake_prediction.ipynb
@@ -31,10 +31,10 @@
     "    ans.index = model_names\n",
     "    \n",
     "    for i in range(n_iters):\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(df.drop(\"is_earthquake\",axis=1), df[\"is_earthquake\"],\n",
+    "                                                                        test_size=0.2)\n",
     "        metrics = []\n",
     "        for mdl in models:\n",
-    "                X_train, X_test, y_train, y_test = train_test_split(df.drop(\"is_earthquake\",axis=1), df[\"is_earthquake\"],\n",
-    "                                                                        test_size=0.2)\n",
     "                mdl.fit(X_train,y_train)\n",
     "                prediction = mdl.predict(X_test).round()\n",
     "                metrics.append([precision_score(prediction,y_test),recall_score(prediction,y_test),f1_score(prediction,y_test)])\n",
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "2dee68ff",
    "metadata": {},
    "outputs": [],
@@ -275,10 +275,10 @@
     "# тестируемые модели с оптимальными гиперпараметрами\n",
     "\n",
     "models = [KNeighborsRegressor(n_neighbors=15,weights='distance'),\n",
-    "         LogisticRegression(solver='newton-cg',random_state=2),\n",
     "         DecisionTreeClassifier(criterion='gini',min_samples_split=4,max_depth=12,random_state=30),\n",
+    "         LogisticRegression(solver='newton-cg',random_state=2),\n",
     "         svm.SVC(kernel='poly',degree=10,C=3.55)]\n",
-    "model_names = ['knn','logreg','random forest','svm']"
+    "model_names = ['knn','random forest','logreg','svm']"
    ]
   },
   {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "6e77331b",
    "metadata": {},
    "outputs": [
@@ -324,21 +324,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>knn</th>\n",
-       "      <td>0.72</td>\n",
-       "      <td>0.62</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>0.61</td>\n",
        "      <td>0.67</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>logreg</th>\n",
-       "      <td>0.60</td>\n",
-       "      <td>0.57</td>\n",
-       "      <td>0.58</td>\n",
+       "      <th>random forest</th>\n",
+       "      <td>0.65</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>0.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>random forest</th>\n",
-       "      <td>0.68</td>\n",
-       "      <td>0.64</td>\n",
-       "      <td>0.65</td>\n",
+       "      <th>logreg</th>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>svm</th>\n",
@@ -352,13 +352,13 @@
       ],
       "text/plain": [
        "               precision  recall  f-score\n",
-       "knn                 0.72    0.62     0.67\n",
-       "logreg              0.60    0.57     0.58\n",
-       "random forest       0.68    0.64     0.65\n",
+       "knn                 0.73    0.61     0.67\n",
+       "random forest       0.65    0.65     0.65\n",
+       "logreg              0.58    0.58     0.58\n",
        "svm                 0.74    0.76     0.75"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
